force-app-fat/main/fat/objects/FAT_LoggerConfig__mdt/FAT_LoggerConfig__mdt.object-meta.xml
<CustomObject>
    <description>Manages whether the logger saves custom logs and where to save.</description>
    <label>FAT_LoggerConfig</label>
    <pluralLabel>FAT_LoggerConfigs</pluralLabel>
</CustomObject>