force-app-fat/main/fat/objects/FAT_LoggerConfig__mdt/fields/Archive__c.field-meta.xml
<CustomField>
    <fullName>Archive__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Determines whether the logger saves custom logs to the custom object.</description>
    <inlineHelpText
  >Check if you want to save custom logs to the custom object</inlineHelpText>
    <label>Archive</label>
    <type>Checkbox</type>
</CustomField>