force-app-fat/main/fat/objects/FAT_LoggerConfig__mdt/fields/LoggerObjectLoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>LoggerObjectLoggingLevel__c</fullName>
    <description
  >API Name of Logging Level Field on Custom Logger Object</description>
    <inlineHelpText
  >API Name of Logging Level Field on Custom Logger Object</inlineHelpText>
    <label>Logger Object : Logging Level</label>
    <metadataRelationshipControllingField
  >FAT_LoggerConfig__mdt.LoggerObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>FAT_LoggerConfigs_LoggingLevel</relationshipLabel>
    <relationshipName>FAT_LoggerConfigs_LoggingLevel</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>