force-app-fat/main/fat/objects/FAT_LoggerConfig__mdt/fields/LoggerObjectLogMessage__c.field-meta.xml
<CustomField>
    <fullName>LoggerObjectLogMessage__c</fullName>
    <description
  >API Name of Log Message Field on Custom Logger Object</description>
    <inlineHelpText
  >API Name of Log Message Field on Custom Logger Object</inlineHelpText>
    <label>Logger Object : Log Message</label>
    <metadataRelationshipControllingField
  >FAT_LoggerConfig__mdt.LoggerObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>FAT_LoggerConfigs_LogMessage</relationshipLabel>
    <relationshipName>FAT_LoggerConfigs_LogMessage</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>