force-app-fat/main/fat/objects/FAT_LoggerConfig__mdt/fields/LoggerObjectName__c.field-meta.xml
<CustomField>
    <fullName>LoggerObjectName__c</fullName>
    <description>API Name of Name Field on Custom Logger Object</description>
    <inlineHelpText
  >API Name of Name Field on Custom Logger Object</inlineHelpText>
    <label>Logger Object : Name</label>
    <metadataRelationshipControllingField
  >FAT_LoggerConfig__mdt.LoggerObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>FAT_LoggerConfigs</relationshipLabel>
    <relationshipName>FAT_LoggerConfigs</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>