force-app-fat/main/fat/objects/FAT_LoggerConfig__mdt/fields/LoggerObjectRecordType__c.field-meta.xml
<CustomField>
    <fullName>LoggerObjectRecordType__c</fullName>
    <description
  >DeveloperName of RecordType on Custom Logger Object</description>
    <inlineHelpText
  >DeveloperName of RecordType on Custom Logger Object</inlineHelpText>
    <label>Logger Object : RecordType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>