force-app-fat/main/fat/objects/FAT_LoggerConfig__mdt/fields/MaxLength__c.field-meta.xml
<CustomField>
    <fullName>MaxLength__c</fullName>
    <description>Max Length of Log Message on the logger</description>
    <inlineHelpText
  >within the limit of Log Message Field on Custom Logger Object</inlineHelpText>
    <label>Logger Object : Max Length</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>