force-app-fat/main/fat/objects/FAT_LoggerConfig__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>LoggingLevel__c</columns>
    <columns>Archive__c</columns>
    <columns>LoggerObject__c</columns>
    <columns>MaxLength__c</columns>
    <columns>LoggerObjectRecordType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>